[package]
name = "iroh-net"
version = "0.5.1"
edition = "2021"
readme = "README.md"
description = "networking support for iroh"
license = "MIT OR Apache-2.0"
authors = ["dignifiedquire <me@dignifiedquire.com>", "n0 team"]
repository = "https://github.com/n0-computer/iroh"

# Sadly this also needs to be updated in .github/workflows/ci.yml
rust-version = "1.67"

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
aead = { version = "0.5.2", features = ["bytes"] }
backoff = "0.4.0"
bytes = "1"
crypto_box = { version = "0.9.1", features = ["serde", "chacha20"] }
curve25519-dalek = "4.0.0"
default-net = "0.16.2"
data-encoding = "2.3.3"
der = { version = "0.7", features = ["alloc", "derive"] }
derive_more = { version = "1.0.0-beta.1", features = ["debug", "display", "from", "try_into", "deref"] }
ed25519-dalek = { version = "2.0.0", features = ["serde", "rand_core"] }
flume = "0.10.14"
futures = "0.3.25"
governor = "0.6.0"
hex = "0.4.3"
hostname = "0.3.1"
http = "0.2.9"
hyper = { version = "0.14.25", features = ["server", "client", "http1", "tcp"] }
igd = { version = "0.12.1", features = ["aio"] }
libc = "0.2.139"
num_enum = "0.6.1"
once_cell = "1.17.0"
os_info = "3.6.0"
postcard = { version = "1", default-features = false, features = ["alloc", "use-std", "experimental-derive"] }
rand = "0.8"
rcgen = "0.11"
reqwest = { version = "0.11.19", default-features = false, features = ["rustls-tls"] }
ring = "0.16.20"
rustls = { version = "0.21", default-features = false, features = ["dangerous_configuration"] }
serde = { version = "1", features = ["derive"] }
ssh-key = { version = "0.6.0", features = ["ed25519", "std", "rand_core"] }
serdect = "0.2.0"
socket2 = "0.5.3"
stun-rs = "0.1.4"
surge-ping = "0.8.0"
thiserror = "1"
tracing = "0.1"
trust-dns-resolver = "0.22.0"
time = "0.3.20"
tokio = { version = "1", features = ["io-util", "sync", "rt", "net", "fs", "io-std", "signal", "process"] }
tokio-util = { version = "0.7", features = ["io-util", "io", "codec"] }
tokio-rustls = { version = "0.24" }
tokio-rustls-acme = { version = "0.2" }
tokio-stream = { version = "0.1", features = ["sync"]}
ucd-parse = "=0.1.10" # pinned to avoid having to bump MSRV to 1.70 (recursive dep of stun-rs)
url = { version = "2.4", features = ["serde"] }
webpki = { package = "rustls-webpki", version = "0.101.4", features = ["std"] }
webpki-roots = "0.25"
wg = "0.3.1"
quinn = "0.10"
quinn-proto = "0.10"
quinn-udp = "0.4"
x509-parser = "0.15"
zeroize = "1.5"

# derper
clap = { version = "4", features = ["derive"], optional = true }
regex = { version = "1.7.1", optional = true }
rustls-pemfile = { version = "1.0.2", optional = true }
serde_with = { version = "3.3", optional = true }
toml = { version = "0.7.3", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

# metrics
iroh-metrics = { version = "0.5.0", path = "../iroh-metrics", optional = true }

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
netlink-packet-route = "0.17.0"
rtnetlink = "0.13.0"

[target.'cfg(target_os = "windows")'.dependencies]
wmi = "0.13"

[dev-dependencies]
clap = { version = "4", features = ["derive"] }
criterion = "0.5.1"
ntest = "0.9"
pretty_assertions = "1.4"
proptest = "1.2.0"
rand_chacha = "0.3.1"
tokio = { version = "1", features = ["io-util", "sync", "rt", "net", "fs", "macros", "time", "test-util"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
iroh-test = { version = "0.5.1", path = "../iroh-test" }

[[bench]]
name = "key"
harness = false

[build-dependencies]
duct = "0.13.6"

[features]
default = ["metrics"]
derper = ["clap", "toml", "rustls-pemfile", "regex", "serde_with", "tracing-subscriber"]
metrics = ["iroh-metrics"]

[[bin]]
name = "derper"
required-features = ["derper"]
