[package]
name = "iroh-net"
version = "0.12.0"
edition = "2021"
readme = "README.md"
description = "networking support for iroh"
license = "MIT OR Apache-2.0"
authors = ["dignifiedquire <me@dignifiedquire.com>", "n0 team"]
repository = "https://github.com/n0-computer/iroh"
keywords = ["quic", "networking", "holepunching", "p2p"]

# Sadly this also needs to be updated in .github/workflows/ci.yml
rust-version = "1.75"

[lints]
workspace = true

[dependencies]
aead = { version = "0.5.2", features = ["bytes"] }
anyhow = { version = "1" }
backoff = "0.4.0"
bytes = "1"
curve25519-dalek = "4.0.0"
data-encoding = "2.3.3"
default-net = "0.20"
der = { version = "0.7", features = ["alloc", "derive"] }
derive_more = { version = "1.0.0-beta.1", features = ["debug", "display", "from", "try_into", "deref"] }
flume = "0.11"
futures = "0.3.25"
governor = "0.6.0"
hex = "0.4.3"
hostname = "0.3.1"
http = "1"
http-body-util = "0.1.0"
hyper = { version = "1", features = ["server", "client", "http1"] }
hyper-util = "0.1.1"
igd = { version = "0.12.1", features = ["aio"] }
iroh-base = { version = "0.12.0", path = "../iroh-base", features = ["key"] }
libc = "0.2.139"
num_enum = "0.7"
once_cell = "1.18.0"
parking_lot = "0.12.1"
postcard = { version = "1", default-features = false, features = ["alloc", "use-std", "experimental-derive"] }
# quinn = "0.10"
# quinn-proto = "0.10.5"
# quinn-udp = "0.4"
quinn = { version = "0.11", path = "../../quinn/quinn" }
quinn-proto = { version = "0.11", path = "../../quinn/quinn-proto" }
quinn-udp = { version = "0.5", path = "../../quinn/quinn-udp" }
rand = "0.8"
rand_core = "0.6.4"
rcgen = "0.11"
reqwest = { version = "0.11.19", default-features = false, features = ["rustls-tls"] }
ring = "0.17"
rustls = { version = "0.21", default-features = false, features = ["dangerous_configuration"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_bytes = "0.11.12"
serdect = "0.2.0"
smallvec = "1.11.1"
socket2 = "0.5.3"
strum = { version = "0.25.0", features = ["derive"] }
stun-rs = "0.1.5"
surge-ping = "0.8.0"
thiserror = "1"
time = "0.3.20"
tokio = { version = "1", features = ["io-util", "macros", "sync", "rt", "net", "fs", "io-std", "signal", "process"] }
tokio-rustls = { version = "0.24" }
tokio-rustls-acme = { version = "0.2" }
tokio-util = { version = "0.7", features = ["io-util", "io", "codec"] }
tracing = "0.1"
hickory-resolver = "0.24.0"
url = { version = "2.4", features = ["serde"] }
watchable = "1.1.2"
webpki = { package = "rustls-webpki", version = "0.101.4", features = ["std"] }
webpki-roots = "0.25"
x509-parser = "0.15"

# derper
clap = { version = "4", features = ["derive"], optional = true }
regex = { version = "1.7.1", optional = true }
rustls-pemfile = { version = "1.0.2", optional = true }
serde_with = { version = "3.3", optional = true }
toml = { version = "0.8", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

# metrics
iroh-metrics = { version = "0.12.0", path = "../iroh-metrics", default-features = false }

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
netlink-packet-core = "0.7.0"
netlink-packet-route = "0.17.0"
netlink-sys = "0.8.5"
rtnetlink = "0.13.0"

[target.'cfg(target_os = "windows")'.dependencies]
wmi = "0.13"
windows = { version = "0.51", features = ["Win32_NetworkManagement_IpHelper", "Win32_Foundation", "Win32_NetworkManagement_Ndis", "Win32_Networking_WinSock"] }

[dev-dependencies]
clap = { version = "4", features = ["derive"] }
criterion = "0.5.1"
crypto_box = { version = "0.9.1", features = ["serde", "chacha20"] }
ntest = "0.9"
pretty_assertions = "1.4"
proptest = "1.2.0"
rand_chacha = "0.3.1"
testdir = "0.9.1"
tokio = { version = "1", features = ["io-util", "sync", "rt", "net", "fs", "macros", "time", "test-util"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
iroh-test = { path = "../iroh-test" }
serde_json = "1.0.107"

[[bench]]
name = "key"
harness = false

[build-dependencies]
duct = "0.13.6"

[features]
default = ["metrics"]
derper = ["clap", "toml", "rustls-pemfile", "regex", "serde_with", "tracing-subscriber"]
metrics = ["iroh-metrics/metrics"]

[[bin]]
name = "derper"
required-features = ["derper"]

[[example]]
name = "listen"

[[example]]
name = "connect"

[[example]]
name = "listen-unreliable"

[[example]]
name = "connect-unreliable"
