[package]
description = "all of iroh in a single binary"
edition = "2021"
license = "Apache-2.0/MIT"
name = "iroh-one"
readme = "README.md"
repository = "https://github.com/n0-computer/iroh"
version = "0.1.3"
rust-version = "1.65"

[dependencies]
anyhow = "1"
async-trait = "0.1.56"
axum = "0.5.1"
bytes = "1.1"
cid = "0.9"
clap = {version = "4.0.9", features = ["derive"]}
config = "0.13.1"
futures = "0.3.21"
headers = "0.3.7"
http-serde = "1.1.0"
hyper = "0.14.19"
iroh-gateway = { version = "0.1.3", path = "../iroh-gateway" }
iroh-metrics = { version = "0.1.3", path = "../iroh-metrics", default-features = false }
iroh-p2p = { version = "0.1.3", path = "../iroh-p2p", default-features = false }
iroh-resolver = { version = "0.1.3", path = "../iroh-resolver" }
iroh-rpc-client = { version = "0.1.3", path = "../iroh-rpc-client", default-features = false }
iroh-rpc-types = { version = "0.1.3", path = "../iroh-rpc-types", default-features = false }
iroh-store = { version = "0.1.3", path = "../iroh-store", default-features = false }
iroh-util = { version = "0.1.3", path = "../iroh-util" }
reqwest = { version = "0.11", features = ["rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
tempfile = { version = "3.3.0", optional = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process"] }
tracing = "0.1.33"

[dev-dependencies]
http = "0.2"

[features]
default = []
http-uds-gateway = ["tempfile"]
