[package]
name = "iroh-one"
readme = "README.md"
description = "all of iroh in a single binary"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait = "0.1.56"
axum = "0.5.1"
bytes = "1.1"
cid = "0.9"
clap = {version = "4.0.9", features = ["derive"]}
config = "0.13.1"
futures = "0.3.21"
headers = "0.3.7"
http-serde = "1.1.0"
hyper = "0.14.19"
iroh-gateway.workspace = true
iroh-metrics.workspace = true
iroh-p2p.workspace = true
iroh-resolver.workspace = true
iroh-unixfs.workspace = true
iroh-rpc-client.workspace = true
iroh-rpc-types.workspace = true
iroh-store.workspace = true
iroh-util.workspace = true
reqwest = { version = "0.11", features = ["rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
tempfile = { version = "3.3.0", optional = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process"] }
tracing = "0.1.33"

[dev-dependencies]
http = "0.2"

[features]
http-uds-gateway = ["tempfile"]
