[package]
name = "iroh-one"
readme = "README.md"
description = "all of iroh in a single binary"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
bytes.workspace = true
cid.workspace = true
clap = { workspace = true, features = ["derive"] }
config.workspace = true
futures.workspace = true
headers.workspace = true
http-serde.workspace = true
hyper.workspace = true
iroh-gateway.workspace = true
iroh-metrics.workspace = true
iroh-p2p.workspace = true
iroh-resolver.workspace = true
iroh-unixfs.workspace = true
iroh-rpc-client.workspace = true
iroh-rpc-types.workspace = true
iroh-store.workspace = true
iroh-util.workspace = true
reqwest = { workspace = true, features = ["rustls-tls"] }
serde = { workspace = true, features = ["derive"] }
tempfile = { workspace = true, optional = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "process"] }
tracing.workspace = true

[dev-dependencies]
http.workspace = true

[features]
http-uds-gateway = ["tempfile"]
