[package]
name = "iroh-p2p"
version = "0.1.3"
edition = "2021"
authors = ["dignifiedquire <me@dignifiedquire.com>"]
license = "Apache-2.0/MIT"
repository = "https://github.com/n0-computer/iroh"
description = "Implementation of the p2p part of iroh"
rust-version = "1.63"

[dependencies]
ahash = "0.8.0"
anyhow = "1"
async-stream = "0.3.3"
async-trait = "0.1.56"
asynchronous-codec = "0.6.0"
bytes = "1.1.0"
cid = "0.9"
clap = { version = "4.0.9", features = ["derive"] }
config = "0.13.1"
futures = "0.3.21"
futures-util = "0.3.21"
git-version = "0.3.5"
iroh-bitswap = { version = "0.1.3", path = "../iroh-bitswap" }
iroh-metrics = { version = "0.1.3", path = "../iroh-metrics", default-features = false, features = ["bitswap", "p2p"] }
iroh-rpc-client = { version = "0.1.3", path = "../iroh-rpc-client", default-features = false }
iroh-rpc-types = { version = "0.1.3", path = "../iroh-rpc-types", default-features = false }
iroh-util = { version = "0.1.3", path = "../iroh-util" }
lazy_static = "1.4"
lru = "0.8"
names = { version = "0.14.0", default-features = false }
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
smallvec = "1.1.0"
ssh-key = { version = "0.5.1", features = ["ed25519", "std", "rand_core"], default-features = false }
tempfile = "3.3.0"
tokio = { version = "1", features = ["fs", "time", "sync", "macros"] }
tokio-stream = "0.1"
toml = "0.5.9"
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
zeroize = "1.4"
 
[dependencies.libp2p]
version = "0.50"
default-features = false
features = [
  "gossipsub",
  "kad",
  "identify",
  "ping",
  "mdns",
  "noise",
  "yamux",
  "tcp",
  "quic",
  "dns",
  "mplex",
  "request-response",
  "websocket",
  "serde",
  "metrics",
  "relay",
  "dcutr",
  "autonat",
  "rsa",
  "tokio",
  "macros",
] 

[dev-dependencies]
criterion = "0.4"
rand_chacha = "0.3.1"

[features]
default = ["rpc-grpc", "rpc-mem"]
rpc-grpc = ["iroh-rpc-types/grpc", "iroh-rpc-client/grpc", "iroh-metrics/rpc-grpc"]
rpc-mem = ["iroh-rpc-types/mem", "iroh-rpc-client/mem"]

[[bench]]
name = "lru_cache"
harness = false
