[package]
name = "iroh-p2p"
version.workspace = true
edition.workspace = true
authors = ["dignifiedquire <me@dignifiedquire.com>"]
license.workspace = true
repository.workspace = true
description = "Implementation of the p2p part of iroh"
rust-version.workspace = true

[dependencies]
ahash.workspace = true
anyhow.workspace = true
async-stream.workspace = true
async-trait.workspace = true
asynchronous-codec.workspace = true
bytes.workspace = true
cid.workspace = true
clap = { workspace = true, features = ["derive"] }
config.workspace = true
futures.workspace = true
futures-util.workspace = true
git-version.workspace = true
iroh-bitswap.workspace = true
iroh-metrics = { workspace = true, features = ["bitswap", "p2p"] }
iroh-rpc-client.workspace = true
iroh-rpc-types.workspace = true
iroh-util.workspace = true
lazy_static.workspace = true
lru.workspace = true
names.workspace = true
rand.workspace = true
serde = { workspace = true, features = ["derive"] }
smallvec.workspace = true
ssh-key = { workspace = true, features = ["ed25519", "std", "rand_core"] }
tempfile.workspace = true
tokio = { workspace = true, features = ["fs", "time", "sync", "macros"] }
tokio-stream.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
zeroize.workspace = true
 
[dependencies.libp2p]
workspace = true
features = [
  "gossipsub",
  "kad",
  "identify",
  "ping",
  "mdns",
  "noise",
  "yamux",
  "tcp",
  "quic",
  "dns",
  "mplex",
  "request-response",
  "websocket",
  "serde",
  "metrics",
  "relay",
  "dcutr",
  "autonat",
  "rsa",
  "tokio",
  "macros",
] 

[dev-dependencies]
criterion.workspace = true
rand_chacha.workspace = true

[[bench]]
name = "lru_cache"
harness = false
